@@ -9,7 +9,7 @@ arithchk.c	63b0185	6532
 asl.h	1fe3527a	42925
 asl_pfg.h	6483336	1268
 asl_pfgh.h	49b5a53	1288
-asldate.c	bfb86cd	29
+asldate.c	ec969e88	29
 atof.c	1fabc7d3	1747
 auxinfo.c	1a3c8690	1488
 avltree.c	10aeaa58	11346
@@ -79,16 +79,16 @@ makefile.u	131b6278	11191
 makefile.vc	1bb69704	7500
 makefile.wat	c465856	5860
 mip_pri.c	f1dd1d47	7887
-misc.c	e44165d	31560
+misc.c	e6adc1b5	31635
 mpec_adj.c	f15f4697	9223
 mpec_adj0.c	efb8be74	70
-mqpcheckv.c	e5df5746	19816
+mqpcheckv.c	e60e70cf	19903
 mypow.c	f6f74614	2464
 names.c	1fc87a42	4343
 nl_obj.c	e8fa1e1	2560
 nlp.h	10ba87d3	5384
 nlp2.h	fcdcbc2a	7126
-nqpcheck.c	c5dec57	18271
+nqpcheck.c	1e266369	18358
 nqpcheckZ.c	ea215f98	1188
 obj2val.c	e939c11	4492
 obj_adj.c	1c990cd0	17623
