@@ -8,7 +8,7 @@ arithchk.c	63b0185	6532
 asl.h	13a346a3	48776
 asl_pfg.h	6483336	1268
 asl_pfgh.h	49b5a53	1288
-asldate.c	bfb86cd	29
+asldate.c	eff6521	29
 atof.c	1fabc7d3	1747
 auxinfo.c	1a3c8690	1488
 avltree.c	10aeaa58	11346
@@ -72,13 +72,13 @@ mip_pri.c	f1dd1d47	7887
 misc.c	f08e6590	31431
 mpec_adj.c	8e59ceb	9172
 mpec_adj0.c	efb8be74	70
-mqpcheckv.c	1d311bca	28707
+mqpcheckv.c	eb808a2e	28794
 mypow.c	f6f74614	2464
 names.c	1fc87a42	4343
 nl_obj.c	ef44e7d	2384
 nlp.h	f4e528f6	4524
 nlp2.h	75d2c79	4697
-nqpcheck.c	f2e4e01c	26234
+nqpcheck.c	e992c2f0	26321
 nqpcheckZ.c	ea215f98	1188
 obj_adj.c	32ac378	18019
 obj_adj.h	eed794cf	2218
@@ -108,7 +108,7 @@ rnd_prod.s	f4996bed	1471
 sigcatch.c	fe35ba8b	2374
 sjac0dim.c	ff686adb	1546
 sos_add.c	f59f41c0	22398
-sphes.c	8054f24	34756
+sphes.c	f0404c9e	34734
 sprintf.c	e6ce1d45	3050
 sscanf.c	e8e79b09	3302
 stderr.c	fc99b4f4	2096
