@@ -3309,5 +3309,13 @@ that includes some functions that can only be used in an AMPL session
   Quietly reduce absurdly large precisions in printf formats.  For
 example, "%.410g" faulted.  Now it works and "%.500g" is quietly
 reduced to "%.415g".
-  Fix a small perforance bug in misc.c -- only need to invoke
+  Fix a small performance bug in misc.c -- only need to invoke
 zerograd_chk once.
+
+20221103
+  mqpcheckv.c, nqpcheck.c in both solvers.tgz and solvers2.tgz:  fix a
+fault that arose under when there are rare cancellations.  Example:
+
+	var x >= 1; var u; var w;
+	minimize o: (w + (1 - w))*(x - u) + u;	# really just x
+
